Changed application header to Livestreams

--- a/packages/webui/src/languages/en.json
+++ b/packages/webui/src/languages/en.json
@@ -19,7 +19,7 @@
   "LostConnection": "Lost connection, reconnecting in {connectingIn}",
   "Language": "Language",
   "MachineLanguage": "App Language",
-  "MainTitle": "Streamsheets",
+  "MainTitle": "Livesheets",
   "Category": "Category",
   "Alert": "Alert",
   "BuildNumber": "Build Number",
